finish main page/navigation

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <title>HolyZlo</title>
+    <title>Junior Fullstack Developer</title>
     <link rel="stylesheet" href="css/style.css">
     <meta name="description" content="">
-    <meta name="keywords" content="создание сайтов, создание сайтов на заказ">
+    <meta name="keywords" content="java development, create web applications">
     <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
 <body>
@@ -14,14 +14,17 @@
 <div class="page">
     <div class="container-white"></div>
     <div class="container-black"></div>
+
     <header class="header">
         <div class="container">
             <div class="header-inner">
                 <div class="header-logo">
-                    <img src="img/header-logo.svg" alt="Logo">
+                    <a href="index.html">
+                        <img src="img/header-logo.svg" alt="Logo">
+                    </a>
                 </div>
                 <nav class="header-nav">
-                    <a class="header-nav-link active" href="about.html">About me</a>
+                    <a class="header-nav-link" href="about.html">About me</a>
                     <a class="header-nav-link" href="skills.html">Skills</a>
                     <a class="header-nav-link" href="portfolio.html">Portfolio</a>
                     <a class="header-nav-link" href="contacts.html">Contact me</a>
@@ -29,33 +32,33 @@
             </div>
         </div>
     </header>
+
     <div class="container">
         <main class="content">
             <div class="content-header">
                 <h2 class="subtitle">Hi, I am</h2>
-                <h1 class="title">Artem Zuev and I’m <span>Junior Fullstack Developer</span></h1>
+                <h1 class="title">Artem Zuev<p><span>Junior Fullstack Developer</span></p></h1>
             </div>
             <div class="text">
-                <p> It is a long established fact that a reader will be distracted by the readable content of a page
-                    when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
-                    distribution of letters, as opposed to using ‘Content here, content here’, making it look like
+                <p>I am a beginner Java Programmer, but I have been programming for more than 5 years. I'm moving from
+                    dead languages to modern development.
                 </p>
             </div>
+
         </main>
     </div>
     <footer class="footer">
         <div class="container">
             <div class="contacts">
-                <a class="contacts-link" href="mailto:jivez@ya.ru">
-                    <img class="contacts-icon" src="img/mail.svg" alt="email">jivez@ya.ru</a>
-                <a class="contacts-link" href="tel:+79021933276">
-                    <img class="contacts-icon" src="img/tel.svg" alt="Phone">+7 902 193-32-76</a>
+                <a class="contacts-link" href="mailto:info@holyzlo.ru">
+                    <img class="contacts-icon" src="img/email.svg" alt="email">info@holyzlo.ru</a>
+                <a class="contacts-link" href="https://t.me/holyzlo" target="_blank">
+                    <img class="contacts-icon" src="img/telegram.svg" alt="Telegram">+7 902 193-32-76</a>
             </div>
         </div>
     </footer>
-
+    <img class="author" src="img/myfoto.png" alt="My foto">
 </div>
-
 
 
 </body>
