--- a/skills.html
+++ b/skills.html
@@ -2,9 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <title>HolyZlo</title>
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="description" content="">
+    <meta name="keywords" content="java development, create web applications">
+    <link rel="icon" type="image/png" href="img/favicon.png">
+
 </head>
 <body>
+
+<div class="page">
+    <div class="container-white"></div>
+<!--    <div class="container-black"></div>-->
+    <header class="header">
+        <div class="container">
+            <div class="header-inner">
+                <div class="header-logo">
+                    <a href="index.html">
+                        <img src="img/header-logo.svg" alt="Logo">
+                    </a>
+                </div>
+                <nav class="header-nav">
+                    <a class="header-nav-link" href="about.html">About me</a>
+                    <a class="header-nav-link active" href="skills.html">Skills</a>
+                    <a class="header-nav-link" href="portfolio.html">Portfolio</a>
+                    <a class="header-nav-link" href="contacts.html">Contact me</a>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <main class="content">
+        <div class="container">
+        </div>
+    </main>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="contacts">
+                <a class="contacts-link" href="mailto:info@holyzlo.ru">
+                    <img class="contacts-icon" src="img/email.svg" alt="email">info@holyzlo.ru</a>
+                <a class="contacts-link" href="tel:+79021933276">
+                    <img class="contacts-icon" src="img/telegram.svg" alt="Phone">+7 902 193-32-76</a>
+            </div>
+        </div>
+    </footer>
+
+</div>
+
 
 </body>
 </html>
